--- a/style.css
+++ b/style.css
@@ -11,3 +11,21 @@ h1{
 #purple{
     color : purple;
 }
+
+.alignLeft{
+    text-align: left;
+}
+.alignCenter{
+    text-align: center;
+}
+
+.alignRight{
+    text-align: right;
+}
+
+.white{
+    color : white
+}
+.blackBackground{
+    background-color: black;
+}
